# replit_twilio_bot

./: .replit  CHECKPOINT_WORKING_STATE.md  VOICE_SETUP_GUIDE.md  fastapi_service.py  package-lock.json  package.json  prompts.py  pyproject.toml  replit.md  run_fastapi.py  simple_fastapi.py  start_fastapi.py  start_service.py  twilio_test.js  voice_bot_integration.js
attached_assets/: Pasted--realtime-base-cojovi-machefty-cmac-caller-python-cmac-multi-py-INFO-Started-server-proces-1752617409000_1752617409000.txt  Pasted--realtime-base-cojovi-machefty-cmac-caller-python-cmac-multi-py-INFO-Started-server-proces-1752617697372_1752617697372.txt  Pasted--rest-express-1-0-0-dev-NODE-ENV-development-tsx-server-index-ts-8-54-05-PM-express-serving-o-1752613366995_1752613366995.txt  Pasted-FastAPI-health-check-failed-fetch-failed-9-09-13-PM-express-GET-api-status-304-in-2ms-fasta-1752613878652_1752613878652.txt  Pasted-Session-Status-online--1752614326925_1752614326925.txt  Pasted-The-second-trace-is-still-hitting-the-same-spot-you-just-don-t-see-the-Twilio-stack-trace-any-more-b-1752619264792_1752619264792.txt  Pasted-We-re-building-a-Twilio-voice-bot-that-streams-real-time-audio-between-Twilio-Media-Streams-and-the--1752611854266_1752611854267.txt  cmac_multi copy_1752618891960.py  cmac_multi_1752618891959.py  requirements_1752618908971.txt
client/src/: App.tsx  index.css
client/src/components/ui/: phone-input.tsx
client/src/pages/: voice-control.tsx
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
