[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.96.1",
    "python-dotenv>=1.1.1",
    "starlette>=0.47.1",
    "twilio>=9.6.5",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
